--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,8 +7,14 @@
 // Reset / normalize
 @import './base/reset';
 
+// Counter
+@import './components/counter';
+
 // Input
 @import './components/input';
+
+// todolist
+@import './components/todolist';
 
 // Navigation
 @import './layout/navigation';
