--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -3,3 +3,4 @@ $color__pink--light: #FFEDF7;
 $color__indigo: #003164;
 $color__white: #FAFAFA;
 $color__grey: #f7f7f7;
+$color__grey--dark: #BDBDBD;
