--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,11 +13,17 @@
 // Input
 @import './components/input';
 
+// Dashboard Nav Bar
+@import './components/navbar';
+
 // todolist
 @import './components/todolist';
 
 // Navigation
 @import './layout/navigation';
+
+// Dashboard specific styles
+@import './pages/dashboard';
 
 // Home specific styles
 @import './pages/home';
