--- a/src/assets/scss/pages/_dashboard.scss
+++ b/src/assets/scss/pages/_dashboard.scss
@@ -8,4 +8,9 @@
         @include pageLayout()
     }
 
+    .navbar__item--active * {
+        color: $color__pink;
+        opacity: 1!important;
+    }
+
 }
